[gd_scene load_steps=3 format=2]

[ext_resource path="res://Resources/Themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://UI/GameConstsEditor/GameConstsEditor.gd" type="Script" id=3]

[node name="GameConstsEditor" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="MainMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="MainMarginContainer"]
margin_right = 530.0
margin_bottom = 320.0
color = Color( 0.0941176, 0.0784314, 0.168627, 0.368627 )

[node name="MarginContainer" type="MarginContainer" parent="MainMarginContainer"]
margin_right = 530.0
margin_bottom = 317.0
size_flags_vertical = 0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="MainMarginContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 510.0
margin_bottom = 297.0
custom_constants/separation = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/VBoxContainer2"]
margin_right = 490.0
margin_bottom = 248.0

[node name="MarginContainer" type="ScrollContainer" parent="MainMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 490.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 220 )

[node name="GameConstsList" type="VBoxContainer" parent="MainMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer/MarginContainer"]
margin_right = 490.0
margin_bottom = 220.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -1

[node name="LineEdit" type="LineEdit" parent="MainMarginContainer/MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 224.0
margin_right = 490.0
margin_bottom = 248.0

[node name="ExitButton" type="Button" parent="MainMarginContainer/MarginContainer/VBoxContainer2"]
margin_top = 263.0
margin_right = 490.0
margin_bottom = 277.0
text = "exit"
